--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Kalkulator</string>
+    <string name="app_name">Calculator</string>
+    <string name="instruction">Enter numbers to calculate</string>
+    <string name="value1">Enter the first value</string>
+    <string name="value2">Enter the second value</string>
+    <string name="count">Count</string>
+    <string name="add">Add</string>
+    <string name="subtract">Subtract</string>
+    <string name="multiply">Multiply</string>
+    <string name="divide">Divide</string>
+
 </resources>
