--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -9,4 +9,7 @@
     <string name="subtract">Kurang</string>
     <string name="multiply">Kali</string>
     <string name="divide">Bagi</string>
+    <string name="result">Hasil:</string>
+    <string name="divisionError">Tidak bisa dibagi 0</string>
+    <string name="selectOperation">Pilih Oprasi</string>
 </resources>
