--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -12,4 +12,7 @@
     <string name="result">Hasil:</string>
     <string name="divisionError">Tidak bisa dibagi 0</string>
     <string name="selectOperation">Pilih Oprasi</string>
+    <string name="history">Sejarah Kalkulator</string>
+    <string name="historyText">Kalkulator mekanis menggunakan roda gigi dan tuas untuk perhitungan matematis.\nDitemukan abad ke-16 (Pascaline), berkembang hingga Arithmometers (abad ke-19).\nPopuler di bisnis dan pendidikan, tapi tergantikan oleh kalkulator elektronik tahun 1970.\nKini menjadi barang koleksi dan diapresiasi karena keindahan mekanisnya.</string>
+
 </resources>
