--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -14,5 +14,6 @@
     <string name="selectOperation">Pilih Oprasi</string>
     <string name="history">Sejarah Kalkulator</string>
     <string name="historyText">Kalkulator mekanis menggunakan roda gigi dan tuas untuk perhitungan matematis.\nDitemukan abad ke-16 (Pascaline), berkembang hingga Arithmometers (abad ke-19).\nPopuler di bisnis dan pendidikan, tapi tergantikan oleh kalkulator elektronik tahun 1970.\nKini menjadi barang koleksi dan diapresiasi karena keindahan mekanisnya.</string>
+    <string name="back">Kembali</string>
 
 </resources>
