--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="back">Back</string>
     <string name="share">Share</string>
     <string name="share_template">Calculation results : %1$s</string>
+    <string name="input_invalid">Cannot be empty</string>
 
 
 
