--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -9,7 +9,13 @@
     <string name="subtract">Kurang</string>
     <string name="multiply">Kali</string>
     <string name="divide">Bagi</string>
-    <string name="result">Hasil:</string>
+    <string name="no_operation_selected">Please select at least one operation</string>
+    <string name="calculation_results">Hasil Perhitungan</string>
+    <string name="error">Error</string>
+    <string name="result_add">Tambah:</string>
+    <string name="result_subtract">Kurang:</string>
+    <string name="result_multiply">Kali:</string>
+    <string name="result_divide">Bagi:</string>
     <string name="divisionError">Tidak bisa dibagi 0</string>
     <string name="selectOperation">Pilih Oprasi</string>
     <string name="history">Sejarah Kalkulator</string>
