--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -9,7 +9,7 @@
     <string name="subtract">Kurang</string>
     <string name="multiply">Kali</string>
     <string name="divide">Bagi</string>
-    <string name="no_operation_selected">Please select at least one operation</string>
+    <string name="no_operation_selected">Pilih minimal satu operator</string>
     <string name="calculation_results">Hasil Perhitungan</string>
     <string name="error">Error</string>
     <string name="result_add">Tambah:</string>
