--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="input_invalid">Cannot be empty</string>
     <string name="value1_share">First value :</string>
     <string name="value2_share">Second value :</string>
+    <string name="kalkulator_image_desc">Calculator Image</string>
+
 
 
 
